# lithos

./: .gitignore  Cargo.toml  MIGRATION.md  README.md  package.json
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-enforcer.yml  ci.yml  deploy-docs.yml  integration-tests.yml  release.yml
.husky/: pre-commit
docs/: package.json  pnpm-lock.yaml  turbo.json
docs/scripts/: package.json  tsconfig.json
docs/site/: .gitignore  next.config.js  package.json  styles.css  theme.config.jsx  tsconfig.json
docs/site/components/: config-format-tabs.tsx  dynamic-markdown.tsx  feature.tsx  schema-reference.tsx
docs/site/pages/: _app.tsx  _meta.json  index.mdx
docs/site/pages/docs/: _meta.json  authentication.mdx  commands.mdx  configuration.mdx  continuous-deployment.mdx  getting-started.mdx  installation.mdx  intro.mdx  remote-state.mdx
docs/site/pages/docs/concepts/: _meta.json  environments.mdx  resource-graph.mdx  state.mdx
docs/site/pages/docs/guides/: _meta.json  migrating-from-mantle.mdx
docs/site/pages/docs/remote-state/: amazon-s3.mdx  cloudflare-r2.mdx
docs/site/remark-plugins/: transform-lithos-config-examples.js
examples/: .gitignore  README.md  foreman.toml
examples/projects/getting-started/: lithos.yml
examples/projects/pirate-wars/: lithos.yml
gen_schema/: Cargo.toml  README.md
gen_schema/src/: main.rs
integration_executor/: Cargo.toml  README.md
integration_executor/src/: files.rs  lib.rs
lithos/: Cargo.toml
lithos/src/: cli.rs  main.rs  ui.rs
lithos/src/commands/: deploy.rs  destroy.rs  diff.rs  download.rs  import.rs  mod.rs  outputs.rs  undo.rs  upload.rs
lithos/src/preview/: mod.rs  model.rs  render.rs  summarize.rs
lithos/src/tui/: mod.rs  plan_view.rs  progress.rs  prompts.rs
logger/: Cargo.toml  README.md
mantle/mantle/src/: cli.rs
mantle/mantle/src/commands/: deploy.rs
project-fixtures/dev/: lithos.yml
rbx_api/: Cargo.toml  README.md
rbx_api/src/: lib.rs
rbx_api/src/api_keys/: mod.rs  models.rs
rbx_api/src/badges/: mod.rs
rbx_api/src/thumbnails/: mod.rs
rbx_auth/: Cargo.toml  README.md
rbx_auth/src/: main.rs
rbx_cookie/src/: wincred.rs
rbx_lithos/: Cargo.toml  README.md
rbx_lithos/src/: config.rs  diagnostics.rs  lib.rs  project.rs  resource_graph.rs  roblox_resource_manager.rs
rbx_lithos/src/config/: loading.rs  mapping.rs
rbx_lithos/src/roblox_resource_manager/: inputs.rs  ops.rs  outputs.rs  quota.rs  resource.rs
rbx_lithos/src/roblox_resource_manager/ops/: create.rs  delete.rs  price.rs  update.rs
rbx_lithos/src/state/: aws_credentials_provider.rs  build.rs  history.rs  io.rs  legacy_resources.rs  mod.rs  progress.rs  reconcile.rs  v1.rs  v3.rs  v5.rs  v7.rs
scripts/: fix-mojibake.js
