[package]
name = "gen_schema"
version = "0.1.0"
edition = "2021"
readme = "README.md"
publish = false

[dependencies]
rbx_lithos = { path = "../rbx_lithos" }

serde_json = { version = "1.0.59" }
schemars = { version = "=0.8.8-blake.2", git = "https://github.com/blake-mealey/schemars", branch = "raw-comments", features = ["derive", "url", "preserve_order"] }
