[package]
name = "rbx_auth"
description = "Constructs params for making authenticated requests to Roblox APIs"
version = "0.1.0"
edition = "2021"
license = "MIT"
include = ["src", "Cargo.toml", "README.md"]
publish = false

[features]
default = ["cli"]
cli = ["dep:clap", "dep:env_logger"]

[dependencies]
rbx_cookie = { path = "../rbx_cookie", default-features = false }

thiserror = "1.0.31"

url = { version = "2.2.2" }
reqwest = { version = "0.11.6", features = ["cookies", "json"] }

log = "0.4.14"
env_logger = { version = "0.9.0", optional = true }
clap = { version = "2.33.0", optional = true }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1.51"
serde_json = { version = "1.0.59" }
anyhow = "1.0.90"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
