[package]
name = "rbx_lithos"
description = "Infra-as-code for Roblox (core library used by Lithos)"
version = "0.1.0"
license = "MIT"
edition = "2021"
readme = "README.md"
include = ["src", "Cargo.toml", "README.md"]
publish = false

[dependencies]
rbx_auth = { path = "../rbx_auth" }
rbx_api = { path = "../rbx_api" }
logger = { path = "../logger" }

serde_yaml = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.0"
glob = "0.3.0"
sha2 = "0.9.8"
difference = "2.0.0"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.51"
chrono = "0.4"
yansi = "0.5.0"
url = { version = "2.2.2", features = ["serde"] }
log = "0.4.14"
schemars = { version = "=0.8.8-blake.2", git = "https://github.com/blake-mealey/schemars", branch = "raw-comments", features = [
    "derive",
    "url",
    "preserve_order",
] }
rbxcloud = "0.13.0"

[dev-dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
